Color coded players

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="description" content="Web game for tictactoe">
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
   <link rel="stylesheet" href="index.css">
   <link href="https://fonts.googleapis.com/css?family=Amatic+SC&display=swap" rel="stylesheet">
   <title>TicTacToe</title>
@@ -16,7 +17,7 @@
       <span id="choice" value="X"></span>
       <h1 class="game-name">TicTacToe</h1>
       <section class="scoreboard player1-label">
-        <p>Player 1</p>
+        <p class="deep-skyblue">Player 1</p>
         <p id="player1-score">0</p>
       </section>
       <section class="reset-game">
@@ -24,7 +25,7 @@
       </section>
       <section id="message"></section>
       <section class="scoreboard player2-label">
-        <p>Player 2</p>
+        <p class="deep-pink">Player 2</p>
         <p id="player2-score">0</p>
       </section>
       <section id="1" class="col-1 row-4 choice-wrapper"></section>
